--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -53,7 +53,7 @@
 	<!--Embedding The User Object-->
 	<script type="text/javascript">
 		var user = {{ user | json | safe }};
-		var code = {{ code }};
+		console.log({{ code }});
 	</script>
 
 	<!--Application JavaScript Files-->
