--- a/app/views/index.server.view.html
+++ b/app/views/index.server.view.html
@@ -1,5 +1,6 @@
 {% extends 'layout.server.view.html' %}
 
 {% block content %}
-	<section data-ui-view></section>
+<section data-ui-view></section>
+<iframe src="/qr?url=http://www.fansworld.tv" frameborder="0"></iframe>
 {% endblock %}
