[wip] report functionality

--- a/app/views/index.server.view.html
+++ b/app/views/index.server.view.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 <section data-ui-view></section>
-<iframe src="/qr?url=http://www.fansworld.tv" frameborder="0"></iframe>
+<div id="qr"></div>
 {% endblock %}
