--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -39,32 +39,51 @@
 	<!-- HTML5 Shim -->
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-</head>
+		<![endif]-->
+	</head>
 
-<body class="ng-cloak">
-	<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
-	<section class="content">
-		<section class="container">
-			{% block content %}{% endblock %}
+	<body class="ng-cloak">
+		<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
+		<section class="content">
+			<section class="container">
+				{% block content %}{% endblock %}
+			</section>
 		</section>
-	</section>
 
-	<!--Embedding The User Object-->
-	<script type="text/javascript">
+		<!--Embedding The User Object-->
+		<script type="text/javascript">
 		var user = {{ user | json | safe }};
 		console.log({{ code }});
-	</script>
+		</script>
 
-	<!--Application JavaScript Files-->
-	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>
-	{% endfor %} 
+		<!--Application JavaScript Files-->
+		{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>
+		{% endfor %} 
 
-	{% if process.env.NODE_ENV === 'development' %}
-	<!--Livereload script rendered -->
-	<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+		{% if process.env.NODE_ENV === 'development' %}
+		<!--Livereload script rendered -->
+		<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+		<script>
+		var qrController = {
+			init: function(){
+				this.getQR();
+			},
+			getQR: function(){
+				$.ajax({
+					url: '/qr',
+					type: 'GET',
+					content: 'html',
+					data: { url: 'http://fansworld.tv' },
+					params: {}
+				}).done(function(data){
+					$('#qr').html(data);
+				});
+			}
+		}
+		qrController.init();
+		</script>
+		{% endif %}
+	</body>
 
-	{% endif %}
-</body>
-
-</html>
+	</html>
