--- a/app/views/pet.server.view.html
+++ b/app/views/pet.server.view.html
@@ -1,5 +1,8 @@
 {% extends 'layout.server.view.html' %}
 
 {% block content %}
-<section data-ui-view></section>
+<h1>Pet Profile</h1>
+<pre>
+	{{pet}}
+</pre>
 {% endblock %}
