--- a/public/modules/pets/views/create-pets.client.view.html
+++ b/public/modules/pets/views/create-pets.client.view.html
@@ -1,6 +1,6 @@
-<section data-ng-controller="Pets2sController">
+<section data-ng-controller="petsController">
     <div class="page-header">
-        <h1>New Pets2</h1>
+        <h1>New pets</h1>
     </div>
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()" novalidate>
