--- a/public/modules/pets/views/edit-pets.client.view.html
+++ b/public/modules/pets/views/edit-pets.client.view.html
@@ -1,6 +1,6 @@
-<section data-ng-controller="Pets2sController" data-ng-init="findOne()">
+<section data-ng-controller="petsController" data-ng-init="findOne()">
     <div class="page-header">
-        <h1>Edit Pets2</h1>
+        <h1>Edit pets</h1>
     </div>
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="update()" novalidate>
@@ -8,7 +8,7 @@
                 <div class="form-group">
                     <label class="control-label" for="name">Name</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="pets2.pets2.name" id="name" class="form-control" placeholder="Name" required>
+                        <input type="text" data-ng-model="pets.pets.name" id="name" class="form-control" placeholder="Name" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -23,143 +23,143 @@
                 <div class="form-group" ng-class="{ 'has-error': petForm.title.$dirty && petForm.title.$invalid }">
                     <label class="control-label" for="name">Nombre</label>
                     <div class="controls">
-                        <input name="name" type="text" data-ng-model="pets2.general.name" id="name" class="form-control" placeholder="Nombre" required>
+                        <input name="name" type="text" data-ng-model="pets.general.name" id="name" class="form-control" placeholder="Nombre" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="color">Color</label>
                     <div class="controls">
-                        <input type="text" name="color" data-ng-model="pets2.general.color" id="color" class="form-control" placeholder="Color"></textarea>
+                        <input type="text" name="color" data-ng-model="pets.general.color" id="color" class="form-control" placeholder="Color"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="breed">Raza</label>
                     <div class="controls">
-                        <input type="text" name="breed" data-ng-model="pets2.general.breed" id="breed" class="form-control" placeholder="Raza"></textarea>
+                        <input type="text" name="breed" data-ng-model="pets.general.breed" id="breed" class="form-control" placeholder="Raza"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="dateOfBirth">Fecha de Nacimiento</label>
                     <div class="controls">
-                        <input type="date" name="dateOfBirth" data-ng-model="pets2.general.dateOfBirth" id="dateOfBirth" class="form-control" placeholder=""></textarea>
+                        <input type="date" name="dateOfBirth" data-ng-model="pets.general.dateOfBirth" id="dateOfBirth" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="general_comments">Comentarios</label>
                     <div class="controls">
-                        <textarea name="general_comments" data-ng-model="pets2.general.comments" id="general_comments" class="form-control" placeholder=""></textarea>
+                        <textarea name="general_comments" data-ng-model="pets.general.comments" id="general_comments" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
                 <h3>Información de Contacto</h3>
                 <div class="form-group" ng-class="{ 'has-error': petForm.title.$dirty && petForm.title.$invalid }">
                     <label class="control-label" for="contactName">Nombre de contacto</label>
                     <div class="controls">
-                        <input name="contactName" type="text" data-ng-model="pets2.contact.contactName" id="contactName" class="form-control" placeholder="Nombre" required>
+                        <input name="contactName" type="text" data-ng-model="pets.contact.contactName" id="contactName" class="form-control" placeholder="Nombre" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="primaryNumber">Numero de contacto</label>
                     <div class="controls">
-                        <input type="text" name="primaryNumber" data-ng-model="pets2.contact.primaryNumber" id="primaryNumber" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="primaryNumber" data-ng-model="pets.contact.primaryNumber" id="primaryNumber" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="alternativeNumber1">Numero de contacto alternativo 1</label>
                     <div class="controls">
-                        <input type="text" name="alternativeNumber1" data-ng-model="pets2.contact.alternativeNumber1" id="alternativeNumber1" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="alternativeNumber1" data-ng-model="pets.contact.alternativeNumber1" id="alternativeNumber1" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="alternativeNumber2">Numero de contacto alternativo 2</label>
                     <div class="controls">
-                        <input type="text" name="alternativeNumber2" data-ng-model="pets2.contact.alternativeNumber2" id="alternativeNumber2" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="alternativeNumber2" data-ng-model="pets.contact.alternativeNumber2" id="alternativeNumber2" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">Email de contacto</label>
                     <div class="controls">
-                        <input type="text" name="email" data-ng-model="pets2.contact.email" id="email" class="form-control" placeholder="email@email.com"></textarea>
+                        <input type="text" name="email" data-ng-model="pets.contact.email" id="email" class="form-control" placeholder="email@email.com"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="facebook">Facebook</label>
                     <div class="controls">
-                        <input type="text" name="facebook" data-ng-model="pets2.contact.facebook" id="facebook" class="form-control" placeholder=""></textarea>
+                        <input type="text" name="facebook" data-ng-model="pets.contact.facebook" id="facebook" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="twitter">Twitter</label>
                     <div class="controls">
-                        <input type="text" name="twitter" data-ng-model="pets2.contact.twitter" id="twitter" class="form-control" placeholder=""></textarea>
+                        <input type="text" name="twitter" data-ng-model="pets.contact.twitter" id="twitter" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
                 <h3>Información de Contacto</h3>
                 <div class="form-group">
                     <label class="control-label" for="vetName">Veterinaria</label>
                     <div class="controls">
-                        <input type="text" name="vetName" data-ng-model="pets2.veterinarian.vetName" id="vetName" class="form-control" placeholder="Nombre"></textarea>
+                        <input type="text" name="vetName" data-ng-model="pets.veterinarian.vetName" id="vetName" class="form-control" placeholder="Nombre"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="vetPhone">Numero de la Veterinaria</label>
                     <div class="controls">
-                        <input type="text" name="vetPhone" data-ng-model="pets2.veterinarian.vetPhone" id="vetPhone" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="vetPhone" data-ng-model="pets.veterinarian.vetPhone" id="vetPhone" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="vetAddress">Dir. de la Veterinaria</label>
                     <div class="controls">
-                        <input type="text" name="vetAddress" data-ng-model="pets2.veterinarian.vetAddress" id="vetAddress" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="vetAddress" data-ng-model="pets.veterinarian.vetAddress" id="vetAddress" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <h3>Información Médica</h3>
                 <div class="form-group">
                     <label class="control-label" for="petSex">Sexo</label>
                     <div class="controls">
-                        <input type="text" name="petSex" data-ng-model="pets2.medical.sex" id="petSex" class="form-control" placeholder=""></textarea>
+                        <input type="text" name="petSex" data-ng-model="pets.medical.sex" id="petSex" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="petMedications">Medicación</label>
                     <div class="controls">
-                        <input type="text" name="petMedications" data-ng-model="pets2.medical.medications" id="petMedications" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="petMedications" data-ng-model="pets.medical.medications" id="petMedications" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="petDietary">Dieta</label>
                     <div class="controls">
-                        <input type="text" name="petDietary" data-ng-model="pets2.medical.dietary" id="petDietary" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="petDietary" data-ng-model="pets.medical.dietary" id="petDietary" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="petAllergies">Alérgias</label>
                     <div class="controls">
-                        <input type="text" name="petAllergies" data-ng-model="pets2.medical.allergies" id="petAllergies" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="petAllergies" data-ng-model="pets.medical.allergies" id="petAllergies" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="petMedicalComments">Commentarios</label>
                     <div class="controls">
-                        <input type="text" name="petMedicalComments" data-ng-model="pets2.medical.comments" id="petMedicalComments" class="form-control" placeholder="Numero"></textarea>
+                        <input type="text" name="petMedicalComments" data-ng-model="pets.medical.comments" id="petMedicalComments" class="form-control" placeholder="Numero"></textarea>
                     </div>
                 </div>
                 <h3>Vacunación</h3>
                 <div class="form-group">
                     <label class="control-label" for="petIsRabies">Antirabica</label>
                     <div class="controls">
-                        <input type="text" name="petIsRabies" data-ng-model="pets2.vaccination.rabies" id="petIsRabies" class="form-control" placeholder=""></textarea>
+                        <input type="text" name="petIsRabies" data-ng-model="pets.vaccination.rabies" id="petIsRabies" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="petRabiesVacDate">Fecha de Vac Antirabica</label>
                     <div class="controls">
-                        <input type="text" name="petRabiesVacDate" data-ng-model="pets2.vaccination.rabiesVaccinationDate" id="petRabiesVacDate" class="form-control" placeholder="Fecha"></textarea>
+                        <input type="text" name="petRabiesVacDate" data-ng-model="pets.vaccination.rabiesVaccinationDate" id="petRabiesVacDate" class="form-control" placeholder="Fecha"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="petAddtionalVac">Vac. Adicionales</label>
                     <div class="controls">
-                        <input type="text" name="petAddtionalVac" data-ng-model="pets2.vaccination.additionalVaccinations" id="petAddtionalVac" class="form-control" placeholder=""></textarea>
+                        <input type="text" name="petAddtionalVac" data-ng-model="pets.vaccination.additionalVaccinations" id="petAddtionalVac" class="form-control" placeholder=""></textarea>
                     </div>
                 </div>
                 <div class="form-group">
