--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -86,6 +86,8 @@
 	
 	<body class="ng-cloak">
 		<br><br><br><br><br>
+		 UPLOAD IMAGE
+<form action="/upload" enctype="multipart/form-data" method="post"><input name="title" type="text" /><input multiple="multiple" name="upload" type="file" /><input type="submit" value="Upload" /></form>
 		<div class="pet-id-container">
 			<div class="cutplace"></div>
 			<div id="qr"></div>
